@@ -46,8 +46,7 @@ class ReviewViewMixin(object):
 
     def get_success_url(self):
         if getattr(settings, 'REVIEW_UPDATE_SUCCESS_URL', False):
-            return reverse(
-                getattr(settings, 'REVIEW_UPDATE_SUCCESS_URL', False))
+            return reverse(settings.REVIEW_UPDATE_SUCCESS_URL)
         return reverse('review_detail', kwargs={'pk': self.object.pk})
 
 
@@ -123,4 +122,6 @@ class ReviewUpdateView(ReviewViewMixin, ReviewUpdateMixin, UpdateView):
 class ReviewDeleteView(ReviewViewMixin, ReviewUpdateMixin, DeleteView):
     """View to delete a ``Review`` instance."""
     def get_success_url(self):
-        return reverse(getattr(settings, 'REVIEW_DELETION_SUCCESS_URL', False))
+        if getattr(settings, 'REVIEW_DELETION_SUCCESS_URL', False):
+                return reverse(settings.REVIEW_DELETION_SUCCESS_URL)
+        return '/'
